--- a/Grabacr07.KanColleViewer/Views/Settings/Others.xaml
+++ b/Grabacr07.KanColleViewer/Views/Settings/Others.xaml
@@ -23,7 +23,7 @@
 	<StackPanel>
 		<TextBlock Text="{Binding Resources.Settings_Screenshot, Source={x:Static models:ResourceService.Current}, Mode=OneWay}"
 				   Style="{DynamicResource HeaderTextBlockStyleKey}" />
-		<Grid Margin="15,0,0,10">
+		<Grid Margin="20,0,0,10">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
@@ -36,7 +36,7 @@
 			</Grid.ColumnDefinitions>
 			<TextBlock Margin="0,6">
 						<Run Text="{Binding Resources.Settings_Screenshot_FolderTextBox_Label, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
-						<Run Text=": " />
+						<Run Text=":  " />
 			</TextBlock>
 			<metro:PromptTextBox Grid.Row="0"
 								 Grid.Column="1"
@@ -58,7 +58,7 @@
 					   Grid.Column="0"
 					   Margin="0,6">
 						<Run Text="{Binding Resources.Settings_Screenshot_ImageFormat_Label, Source={x:Static models:ResourceService.Current}, Mode=OneWay}" />
-						<Run Text=": " />
+						<Run Text=":  " />
 			</TextBlock>
 			<StackPanel Grid.Row="1"
 						Grid.Column="1"
@@ -67,7 +67,7 @@
 				<RadioButton IsChecked="{Binding ScreenshotImageFormat, Mode=TwoWay, ConverterParameter=Png, Converter={StaticResource EnumToBooleanConverter}}">
 					<TextBlock Text="PNG" />
 				</RadioButton>
-				<RadioButton Margin="10,0,0,0"
+				<RadioButton Margin="16,0,0,0"
 							 IsChecked="{Binding ScreenshotImageFormat, Mode=TwoWay, ConverterParameter=Jpeg, Converter={StaticResource EnumToBooleanConverter}}">
 					<TextBlock Text="JPG" />
 				</RadioButton>
@@ -77,11 +77,11 @@
 		<Rectangle Height="1"
 				   Style="{DynamicResource SeparatorRectangleStyleKey}" />
 
-		<TextBlock Text="テーマ"
+		<!--<TextBlock Text="テーマ"
 				   Style="{DynamicResource HeaderTextBlockStyleKey}"
 				   Margin="0,10" />
 
-		<WrapPanel Margin="15,0,0,10">
+		<WrapPanel Margin="20,0,0,10">
 			<RadioButton IsChecked="{Binding IsDarkTheme, Mode=TwoWay}"
 						 Margin="0,0,24,0">
 				<TextBlock Text="Dark"
@@ -98,13 +98,13 @@
 		</WrapPanel>
 
 		<Rectangle Height="1"
-				   Style="{DynamicResource SeparatorRectangleStyleKey}" />
+				   Style="{DynamicResource SeparatorRectangleStyleKey}" />-->
 
 		<TextBlock Text="{Binding Resources.Settings_Language, Source={x:Static models:ResourceService.Current}, Mode=OneWay}"
 				   Style="{DynamicResource HeaderTextBlockStyleKey}"
 				   Margin="0,10" />
 
-		<metro:PromptComboBox Margin="15,0,0,12"
+		<metro:PromptComboBox Margin="20,0,0,12"
 							  HorizontalAlignment="Left"
 							  Prompt=""
 							  ItemsSource="{Binding Cultures}"
